[gd_scene load_steps=5 format=3 uid="uid://54gijs1e8xrt"]

[ext_resource type="Script" path="res://game/game.gd" id="1_pthe0"]
[ext_resource type="PackedScene" uid="uid://dfbfp5mmuekw4" path="res://game/play_area/play_area.tscn" id="2_2va6r"]
[ext_resource type="Script" path="res://game/draw_pile_count.gd" id="3_moohs"]
[ext_resource type="PackedScene" uid="uid://c6s5qe2ct4pnp" path="res://components/selection_area/selectionArea.tscn" id="4_rhxrg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_pthe0")

[node name="Player1RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(561, 581)

[node name="Player2RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(561, 73)

[node name="PlayArea" parent="." instance=ExtResource("2_2va6r")]
position = Vector2(574, 319)

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DrawPileCount" type="Label" parent="GameUI"]
layout_mode = 0
offset_left = 224.0
offset_top = 312.0
offset_right = 264.0
offset_bottom = 335.0
text = "0"
script = ExtResource("3_moohs")

[node name="EndTurnButton" type="Button" parent="GameUI"]
layout_mode = 0
offset_left = 968.0
offset_top = 472.0
offset_right = 1044.0
offset_bottom = 503.0
text = "end turn"

[node name="SelectionArea" parent="." instance=ExtResource("4_rhxrg")]

[connection signal="button_up" from="GameUI/EndTurnButton" to="." method="_on_end_turn_button_button_up"]
[connection signal="selection_end" from="SelectionArea" to="." method="_on_selection_area_selection_end"]
